# textract2alto

./: .gitignore  README.md  pyproject.toml
textract2alto/: cli.py  convert_aws.py
